Filter Species by Capabilities - Feature   - All movement capabilities (except Teleport) now can be filtered by   - The ranges use the minimum and maximum of all loaded species - Tech   - Sliders now work     - Added noUiSlider v15.7.1       - nouislider.css, nouislider.mjs     - attempted to work as similar to how Tagify is added to PTR as I am able to     - PF2e had an extra .scss file for some slider styles that are very much needed - min/max labels were otherwise misplaced. I had no idea what to properly do with that, so I converted it into an extra css file, `slider.css`     - Made sliders visible per default, as otherwise you would have to click twice on a Sliderfilter to open it, it would auto close and also scroll on the y axis when ever anything is updated. Could not create any weird behavior now that it is visible by default.   - Compiled main.less with latest lessc vom npm. Hope thats correct. The diff looks good.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -230,6 +230,16 @@
                                 margin-top: 5px;
                                 padding: 2px;
                             }
+                            .slidercontainer {
+                                &-flex {
+                                    display: flex;
+                                    justify-content: space-around;
+                                    align-items: baseline;
+                                    label {
+                                        width: 10px;
+                                    }
+                                }
+                            }
 
                             input {
                                 width: 100%;
